--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.11.1",
     "express-handlebars": "^1.2.1",
     "morgan": "~1.5.1",
+    "request": "^2.53.0",
     "serve-favicon": "~2.2.0"
   }
 }
