--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express-handlebars": "^1.2.1",
     "morgan": "~1.5.1",
     "request": "^2.53.0",
-    "serve-favicon": "~2.2.0",
-    "unirest": "^0.4.0"
+    "serve-favicon": "~2.2.0"
   }
 }
