--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "express-handlebars": "^1.2.1",
+    "mongodb": "^1.4.33",
     "morgan": "~1.5.1",
     "request": "^2.53.0",
     "serve-favicon": "~2.2.0"
